<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Context Data Analysiss</string>
    <!-- activity names -->
    <string name="title_activity_location_updates">LocationUpdates</string>
    <string name="title_activity_geofencing">Geofencing</string>
    <!-- button names -->
    <string name="location_updates_btn">Location Updates</string>
    <string name="geofencing_btn">Geofencing</string>
    <string name="add_geofences_btn">Add Geofences</string>
    <string name="clear_geofences_btn">Clear Geofences</string>
    <string name="monitor_geofences_btn">Monitor Geofences</string>
    <string name="unmonitor_home_geofence_btn">Unominitor Home Geofence</string>
    <string name="unmonitor_work_geofence_btn">Unominitor Work Geofence</string>
    <string name="unmonitor_geofences_all_btn">Unmonitor Geofences</string>
    <string name="log_btn">Log</string>
    <string name="activity_scan_on_btn">Start Activity Recognition</string>
    <string name="activity_scan_off_btn">Stop</string>
    <!-- labels -->
    <string name="current_location">Location:</string>
    <string name="time">Time:</string>
    <string name="weather">Weather:</string>
    <string name="home_address">Home address:</string>
    <string name="work_address">Work address:</string>
    <string name="existing_geofences">Exisitng Geofences</string>
    <string name="home_geofence">Home Geofence</string>
    <string name="work_geofence">Work Geofence</string>
    <string name="geofence_id">Id:</string>
    <string name="geofence_lat">Latitude:</string>
    <string name="geofence_lng">Longitude:</string>
    <string name="geofence_rad">Radius:</string>
    <!-- messages -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_geofencing2">Geofencing2</string>
    <string name="add_geofences_result_success"> Add Geofences: Success GeofenceRequestIds=%1$s</string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="geofence_transition_unknown">Unknown transition</string>
    <string name="geofence_transition_invalid_type">Geofence transition error. Invalid type %1$d in geofences %2$s</string>
    <string name="geofence_transition_notification_text">Click notification to return to app</string>
    <string name="geofence_transition_notification_title">%1$s geofence(s) %2$s</string>
    <string name="add_geofences_result_failure">Add Geofences: Failure, error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="connected">Client connected</string>
    <string name="disconnected">Client disconnected</string>
    <string name="remove_geofences_intent_success">Removing of all geofences succeeded.</string>
    <string name="remove_geofences_intent_failure">Removing all geofences failed: error code %1$d</string>
    <string name="remove_geofences_id_success">Removing geofences by request ids succeeded: request ids: %1$s.</string>
    <string name="remove_geofences_id_failure">Removing geofences by request id failed: error code %1$d GeofenceRequestIds=%2$s</string>
    <string name="invalid_action">Invalid action received. See error log for details.</string>
    <string name="invalid_action_detail">Invalid action %1$s received.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="unknown_activity_request_code">Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="title_activity_log">Log</string>
    <string name="hello_world">Hello world!</string>


    <!-- testing -->
    <string name="home_test">222 Broadlands Road</string>
    <string name="work_test">116 Burgess Road</string>
</resources>
